# fursight-ai

./: .gitignore  README.md
apps/backend-fastapi/: .dockerignore  Dockerfile  main.py  pyproject.toml
apps/fastapi-backend/: Dockerfile  pyproject.toml
apps/fastapi-backend/fastapi-chart/: values.yaml
apps/frontend-nextjs/: Dockerfile  package-lock.json  package.json
apps/frontend-nextjs/pages/: demo.js
backend/: requirements.txt
backend/app/: kafka_worker.py  main.py
diagrams/: components.drawio  db.md  deployment-dev.md  deployment-guide.md  diagram.md  overview.md  project.html
diagrams/prompts/: 00-master-prompt.md  01-cluster-summary.md  02-next-steps.md
frontend/: Dockerfile  app.py  requirements.txt
frontend/static/css/: styles.css
frontend/static/js/: bar_chart.js  charts.js  choropleth_map.js  main.js  table.js
frontend/templates/: assessment.html  index.html
infra/kubernetes/charts/backend-fastapi/: Chart.yaml  values.yaml
infra/kubernetes/charts/frontend-nextjs/: Chart.yaml  values.yaml
infra/kubernetes/charts/vllm-server/: Chart.yaml  values.yaml
infra/kubernetes/manifests/: keycloak-ingress.yaml  strip-prefix-middleware.yaml  traefik-dashboard-ingress.yaml
infra/kubernetes/manifests/cert-manager/: self-signed-issuer.yaml
k8s/: backend.yaml  db.yaml  frontend.yaml  grafana.yaml  kafka-data-pvc.yaml  kafka.yaml  ollama.yaml  prometheus.yaml  tools-dev.yaml  zookeeper-data-pvc.yaml  zookeeper-deployment.yaml  zookeeper-service.yaml
scripts/: deploy_mac.sh  deploy_win.bat  gitpush.sh
(+16 files in other folders)
